<resources>
    <string name="app_name">MySubmission3</string>
    <string name="light">light</string>
    <string name="dark">dark</string>
    <string name="name">brein</string>
    <string name="search">search</string>
    <string name="favorite">favorite</string>
    <string name="theme">theme</string>
    <string name="repository">repository</string>
    <string name="following">following</string>
    <string name="follower">follower</string>
    <string name="username_user">username</string>
    <string name="name_user">Name</string>
    <string name="location">Location</string>
    <string name="company">Company</string>
    <string name="tab_follower">Follower</string>
    <string name="tab_following">Following</string>
    <string name="no_user">No User Found</string>
</resources>