<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="always"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item
        android:id="@+id/favorite"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorite"
        app:showAsAction="always"/>

    <item
        android:id="@+id/theme"
        android:icon="@drawable/ic_setting"
        android:title="@string/theme"
        app:showAsAction="always"/>

    <item
        android:id="@+id/translate"
        android:title="translate"
        android:icon="@drawable/ic_translate"
        app:showAsAction="always"/>

</menu>